# Bank-Management-Application

./: .gitignore  .qmake.stash  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  accounts.txt  bankaccount.cpp  bankaccount.h  bankapp.pro  c_cpp_properties.json  cmake_install.cmake  compile_commands.json  main.cpp  mainwindow.cpp  mainwindow.h  tasks.json
